samples/_failures_safe/1761338219_9b29bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0efcaca4.c:91:26: error: missing terminating ' character
   91 |     {STATE_READING_WORD, 'm
      |                          ^~
./samples/SAFE/__tmp_0efcaca4.c:91:5: error: expected expression at end of input
   91 |     {STATE_READING_WORD, 'm
      |     ^
